<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:elevation="10dp"
            android:paddingBottom="16dp"
            diagonal:diagonal_angle="10"
            diagonal:diagonal_gravity="left">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/mine_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="70dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_app_tip2"
                android:textColor="@color/main_color"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="105dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/menu_app_tip"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="190dp"
            android:background="@drawable/circle"
            android:elevation="15dp"
            android:src="@mipmap/me" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_menu_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/action_share"
            android:textColor="@color/light_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_menu_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/str_about_us"
            android:textColor="@color/light_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_menu_mode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/str_mode"
            android:textColor="@color/light_gray" />
        
        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/switch_btn"
            style="@style/SwitchButtonStyleMD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


</LinearLayout>
